# project-cli-bot

./: .gitattributes  .gitignore  LICENSE  README.md  README_UA.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
assistant_bot/: __init__.py  __main__.py  app.py
assistant_bot/cli/: __init__.py  command_registry.py  handlers.py  help_text.py  interaction.py  parser.py  renderer.py  results.py
assistant_bot/cli/handlers/: __init__.py  base.py  contact_commands.py  contact_tag_commands.py  internal_helper_methods.py  note_commands.py  (+1 more)
assistant_bot/domain/: __init__.py  contacts.py  exceptions.py  notes.py
assistant_bot/repositories/: __init__.py  contact_repository.py  json_contact_repository.py  json_note_repository.py  note_repository.py
assistant_bot/services/: __init__.py  birthday_service.py  contact_service.py  note_service.py  suggestion_service.py
assistant_bot/storage/: __init__.py  base.py  json_storage.py  paths.py
assistant_bot/utils/: __init__.py  datetime_utils.py  fuzzy_match.py  text_utils.py  validators.py
data/examples/: ex_contacts.csv  ex_contacts.json
tests/: builders.py  conftest.py  data_samples.py  fakes.py  test_birthday_service.py  test_command_registry.py  test_contact_service.py  test_contacts_domain.py  test_datetime_utils.py  test_exceptions.py  test_fuzzy_match.py  test_help_text.py  test_json_storage.py  test_note_service.py  test_notes_domain.py  test_parser.py  test_paths.py  test_renderer.py  test_results.py  test_suggestion_service.py  test_text_utils.py  test_validators.py
